LoadWebLocalizedStrings method should be moved in correct file https://bugs.webkit.org/show_bug.cgi?id=167393

Reviewed by Alexey Proskuryakov.

Source/WebKit/ios:

* Misc/WebUIKitSupport.mm:
(LoadWebLocalizedStringsTimerCallback): Moved from WebLocalizableStrings.mm
(LoadWebLocalizedStrings): Moved from WebLocalizableStrings.mm

Source/WebKit/mac:

* Misc/WebLocalizableStrings.h: Deleted LoadWebLocalizedStrings method.
* Misc/WebLocalizableStrings.mm:
(LoadWebLocalizedStringsTimerCallback): Deleted, moved to WebUIKitSupport.mm
(LoadWebLocalizedStrings): Deleted, moved to WebUIKitSupport.mm


Canonical link: https://commits.webkit.org/184453@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211156 268f45cc-cd09-0410-ab3c-d52691b4dbfc