Source/WebKit/ios/Misc/WebUIKitSupport.mm
@@ -29,7 +29,7 @@
 
 #import "WebDatabaseManagerInternal.h"
 #import "WebKitSystemInterface.h"
-#import "WebLocalizableStrings.h"
+#import "WebLocalizableStringsInternal.h"
 #import "WebPlatformStrategies.h"
 #import "WebSystemInterface.h"
 #import "WebViewPrivate.h"
@@ -49,6 +49,23 @@ static inline bool linkedOnOrAfterIOS5()
 {
     static bool s_linkedOnOrAfterIOS5 = dyld_get_program_sdk_version() >= DYLD_IOS_VERSION_5_0;
     return s_linkedOnOrAfterIOS5;
+}
+
+// See <rdar://problem/7902473> Optimize WebLocalizedString for why we do this on a background thread on a timer callback
+static void LoadWebLocalizedStringsTimerCallback(CFRunLoopTimerRef timer, void *info)
+{
+    dispatch_async(dispatch_get_global_queue(DISPATCH_QUEUE_PRIORITY_LOW, 0), ^ {
+        // We don't care if we find this string, but searching for it will load the plist and save the results.
+        // FIXME: It would be nicer to do this in a more direct way.
+        UI_STRING_KEY_INTERNAL("Typing", "Typing (Undo action name)", "Undo action name");
+    });
+}
+
+static void LoadWebLocalizedStrings()
+{
+    CFRunLoopTimerRef timer = CFRunLoopTimerCreate(kCFAllocatorDefault, CFAbsoluteTimeGetCurrent(), 0, 0, 0, &LoadWebLocalizedStringsTimerCallback, NULL);
+    CFRunLoopAddTimer(CFRunLoopGetCurrent(), timer, kCFRunLoopCommonModes);
+    CFRelease(timer);
 }
 
 void WebKitInitialize(void)
