Source/WebKit/mac/Misc/WebLocalizableStrings.mm
@@ -31,11 +31,6 @@
 #import <wtf/Assertions.h>
 #import <wtf/MainThread.h>
 
-#if PLATFORM(IOS)
-#import "WebLocalizableStringsInternal.h"
-#import <dispatch/dispatch.h>
-#endif
-
 WebLocalizableStringsBundle WebKitLocalizableStringsBundle = { "com.apple.WebKit", 0 };
 
 NSString *WebLocalizedString(WebLocalizableStringsBundle *stringsBundle, const char *key)
@@ -72,24 +67,3 @@ NSString *WebLocalizedString(WebLocalizableStringsBundle *stringsBundle, const c
     ASSERT_WITH_MESSAGE(result != notFound, "could not find localizable string %s in bundle", key);
     return result;
 }
-
-#if PLATFORM(IOS)
-
-// See <rdar://problem/7902473> Optimize WebLocalizedString for why we do this on a background thread on a timer callback
-static void LoadWebLocalizedStringsTimerCallback(CFRunLoopTimerRef timer, void *info)
-{
-    dispatch_async(dispatch_get_global_queue(DISPATCH_QUEUE_PRIORITY_LOW, 0), ^{
-        // We don't care if we find this string, but searching for it will load the plist and save the results.
-        // FIXME: It would be nicer to do this in a more direct way.
-        UI_STRING_KEY_INTERNAL("Typing", "Typing (Undo action name)", "Undo action name");
-    });
-}
-
-void LoadWebLocalizedStrings(void)
-{
-    CFRunLoopTimerRef timer = CFRunLoopTimerCreate(kCFAllocatorDefault, CFAbsoluteTimeGetCurrent(), 0, 0, 0, &LoadWebLocalizedStringsTimerCallback, NULL);
-    CFRunLoopAddTimer(CFRunLoopGetCurrent(), timer, kCFRunLoopCommonModes);
-    CFRelease(timer);
-}
-
-#endif
